Finished cleaning and adding content

--- a/CCProjects/HTMLCalc/index.html
+++ b/CCProjects/HTMLCalc/index.html
@@ -72,7 +72,7 @@
               <div class="navGroups">
                 <div class="navGroup">
                   <a href="#top">
-                    <h3 class="navGroupCategoryTitle">WD 2</h3>
+                    <h3 class="navGroupCategoryTitle">HTML Calc</h3>
                   </a>
                   <ul id="toc">
                     <progress id="pb" value="0" max="100"></progress>
@@ -160,11 +160,14 @@
                 <a id="0CSU">
                   <h2><code class="prettifyHTML">Code Setup</code></h2>
                 </a>
-                <p>Add the following code to <code class="prettifyHTML">index.html</code></p>
+                <p>Add the following code to <code class="prettifyHTML">index.html</code> <br>
+                  <code class="prettifySQL">HINT! Type html and then press tab. It will save you some typing.</code>
+                </p>
                 <div class='CodeBoxL'>
                   <pre class="prettyprint linenums lang-html CodeBoxBuffer">
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
+
   &lt;head&gt;
     &lt;title&gt;HTML Calc!&lt;/title&gt;
   &lt;/head&gt;
@@ -176,30 +179,31 @@
   &lt;/script>
 
   &lt;body&gt;
-    Hello, World!
   &lt;/body&gt;
+
 &lt;/html&gt;</pre>
                 </div>
                 <p>This is the standard <code class="prettifyHTML">index.html</code> setup you have seen 100 times, <strong>but what's new?</strong></p>
                 <p>
                   <code class="prettifyCSS">&lt;style>&lt;/style></code> tag holds our CSS code. <br>
                   <code class="prettifyJS">&lt;script>&lt;/script></code> tag holds our JS code. <br>
-                  <!-- <code class="prettifyHTML">&lt;body>&lt;/body></code> tag holds our HTML code. <br> -->
+                  <code class="prettifyHTML">&lt;body>&lt;/body></code> tag holds our HTML code. <br>
                   <br>
-                  This way we don't have to worry about making several different files. &#x1F389; <code class="prettifySQL">Yay!</code> &#x1F389;
+                  Everything we need is right here! We don't have to worry about making several different files. &#x1F389; <code class="prettifySQL">Yay!</code> &#x1F389;
                 </p>
                 <div class="paraSection">
                   <a id="0C">
-                    <h2 style="margin-top:5px;"><code class="prettifyCOM">Comments</code></h2>
+                    <h2 style="margin-top:5px;"><code class="prettifyCOM">Comments ＼(*^▽^*)/</code></h2>
                   </a>
                   <ol>
                     <li>You do not need to write any of the <code class="prettifyCOM">code in green.</code> <br> These are comments, <strong>the computer ignores them.</strong></li> <br>
                     <li>It would be a good idea for you to <code class="prettifyCOM">&lt;!-- add your own comments. --></code> <br> This way you will know what is going on when you try to read your code later on!</li> <br>
-                    <li>Please <strong>add the following code</strong> to your <code class="prettifyHTML">index.html</code></li>
                   </ol>
-                  <p>This <code class="prettifyHTML">div</code> will hold all of the buttons and text that we will see on the page.</p>
-                  <p><code class="prettifySQL">Add a comment about what the 'main' div is doing, or your favorite video game (סּںסּَ`)</code> </p>
                 </div>
+                <br>
+                <p>Please <strong>add the following code</strong> to your <code class="prettifyHTML">index.html</code></p>
+                <p>This <code class="prettifyHTML">div</code> will hold all of the buttons and text that we will see on the page.</p>
+                <p><code class="prettifySQL">Add a comment about what the 'main' div is doing, or your favorite video game (סּںסּَ`)</code> </p>
                 <br>
                 <div class='CodeBoxL'>
                   <pre class="prettyprint linenums lang-html CodeBoxBuffer">
@@ -218,7 +222,6 @@
   &lt;body&gt;
     &lt;!-- Add the code below! -->
     &lt;div class="main">
-      Hello, World!
     &lt;/div>
     &lt;!-- Add the code above! -->
   &lt;/body&gt;
@@ -266,10 +269,16 @@
                 <a id="0TABLE">
                   <h2><code class="prettifyHTML">Table</code></h2>
                 </a>
-                <p>We will use a <code class="prettifyHTML">Table</code> to arange the buttons.</p> <br>
+                <p>We are going to use a <code class="prettifyHTML">Table</code> to arange the buttons.</p> <br>
                 <p><code class="prettifySQL">Why should we use a table?</code></p>
                 <p><code class="prettifySQL">How many rows should we make? Why that many?</code></p>
-                <p><code class="prettifyCOM">If you know &lt;!-- Comment your answer --> and <strong>Quiz an instructor!</strong></code> </p>
+
+                <div style="width:50%; margin:auto;" class="paraSection paraCenter">
+                  <p style="margin-bottom:0px; "><code class="prettifyCOM">If you know why &lt;!-- Comment your answer --> </code> <br>
+                    <i>or</i> <br>
+                    <code class="prettifyCOM"><strong>Quiz an instructor!</strong></code>
+                  </p>
+                </div>
                 <p>You can use <a target="_blank" href="https://mm909.github.io/SpeedCodeHTMLCalc/"><u><strong>THIS!</strong></u></a> as a reference.</p>
                 <br>
                 <p>Add the following - <code class="prettifySQL">⦿⽘⦿</code> </p>
@@ -315,7 +324,6 @@
   &lt;/body&gt;
 &lt;/html&gt;</pre>
                 </div>
-                <br>
                 <a id="0TABLEDATA">
                   <h2><code class="prettifyHTML">Table Data</code></h2>
                 </a>
@@ -413,7 +421,7 @@
                     </p>
                   </div>
                 </div>
-
+                <br>
                 <p>Add a button to each <code class="prettifyHTML">td</code></p>
                 <div class='CodeBoxL'>
                   <pre class="prettyprint linenums lang-html CodeBoxBuffer">
@@ -473,9 +481,7 @@
                 <div class="paraCenter">
                   <p> <strong>&#x1F389; <code class="prettifySQL">WE HAVE BUTTONS!</code> &#x1F389;</strong> </p>
                 </div>
-
                 <br>
-
                 <div class="paraSection">
                   <div class="main">
                     <form name="form">
@@ -514,7 +520,8 @@
                   </div>
                 </div>
                 <br>
-                <p>Lets add some lables to those buttons!</p>
+                <p>But out buttons do not mean anything, lets add some lables! <face>＼(●~▽~●)</face>
+                </p>
                 <div class="paraSection">
                   <p>
                     To add text to our buttons we need to change the <code class="prettifyJS">value=""</code> attribute. <br>
@@ -623,7 +630,7 @@
                   </div>
                 </div>
                 <h1>We are done!</h1>
-                <p> <code class="prettifySQL">With programming HTML:)</code> </p>
+                <p> Well kinda <face> (´･ω･`) </face> <br> <code class="prettifySQL">We are done programming in HTML:)</code> </p>
                 <p>Next we will add some <code class="prettifyJS">(ﾉ◕ヮ◕)ﾉ JS</code> to our program so that the buttons actually do things. </p>
               </section>
               <section id="section_JS">
@@ -656,7 +663,7 @@ function addOne(num) { // ~(˘▾˘~)
                 <p>When we want to 'call' this function we will have use its name. <br> This function has a name of <code class="prettifyJS">addOne</code></p>
                 <p>Sometimes functions need some extra information. Like where to draw the hero or the health of an enemy. <br> This function needs <strong> one peice of extra informaiton </strong><code class="prettifyJS">(num)</code></p>
                 <p>Finally we need instructions for our function to follow. <br> This function's instructions are inbetween two curly brackets <strong>{</strong> <code class="prettifyJS">num++;</code> <strong>}</strong></p>
-                <p>There are four different <code class="prettifySQL">functions</code> we have to write.</p>
+                <p>There are four different <code class="prettifySQL">functions</code> we have to write for our calculator.</p>
                 <ol>
                   <li>insert(num)</li>
                   <li>equal()</li>
@@ -797,7 +804,9 @@ function addOne(num) { // ~(˘▾˘~)
                   </div>
                 </div>
                 <br>
-                <p>We are actually only <strong> one function away</strong> from making our calculator work. Everything else just makes it easier to use and look better.</p>
+                <p>
+                  We are actually only <strong> one function away</strong> from making our calculator work. Everything else just makes it easier to use and look better. <face>ヽ(´▽｀)ノ </face>
+                </p>
 
                 <a id="0EQL">
                   <h2><code class="prettifyCSS">equal()</code></h2>
@@ -922,7 +931,7 @@ function addOne(num) { // ~(˘▾˘~)
                       }
                     }
 
-                    function a() {
+                    function a3() {
                       document.form3.textview3.value = "";
                     }
                   </script>
@@ -932,7 +941,7 @@ function addOne(num) { // ~(˘▾˘~)
                     </form>
                     <table>
                       <tr>
-                        <td><input class="button1" type="button" onclick="a()" value="C"></td>
+                        <td><input class="button1" type="button" onclick="a3()" value="C"></td>
                         <td><input class="button1" type="button" onclick="" value="<"></td>
                         <td><input class="button1" type="button" onclick="insert3('/')" value="/"></td>
                         <td><input class="button1" type="button" onclick="insert3('*')" value="*"></td>
@@ -966,7 +975,7 @@ function addOne(num) { // ~(˘▾˘~)
                 <a id="0BS">
                   <h2><code class="prettifyCSS">back()</code></h2>
                 </a>
-                <p>The back() function will 'backspace' our input</p>
+                <p>The <strong>back()</strong> function will 'backspace' our input</p>
                 <p>Add this code to the script section.</p>
                 <div class='CodeBoxL'>
                   <pre class="prettyprint linenums lang-js CodeBoxBuffer">
@@ -1138,7 +1147,7 @@ function ????? () {
     /* Set the width to 192px */
     /* Set the height to 25px */
     margin-left:2px;
-    font-size: 25;
+    /* Set the font-size to 25px */
     padding: 5px;
   }
 &lt;/style></pre>
@@ -1158,14 +1167,40 @@ function ????? () {
   }
 &lt;/style></pre>
                 </div>
+
+                <p>One last thing lets add some "inline styles" to our two of our buttons.</p>
+
+                <p>This will make them fill in the blank space. <br> First, the '=' button. </p>
+                <input style="height:102px" class="button1" type="button" onclick="equal()" value="=">
+                <div class='CodeBoxL'>
+                  <pre class="prettyprint linenums lang-css CodeBoxBuffer">
+&lt;td <u>rowspan="5"</u>>&lt;input <u>style="height:102px"</u> class="button" type="button" onclick="equal()" value="=">&lt;/td>
+</pre>
+                </div>
+                <p>And now, the '0' button. </p>
+                <input style="width:102px" class="button1" type="button" onclick="insert(0)" value="0">
+                <div class='CodeBoxL'>
+                  <pre class="prettyprint linenums lang-css CodeBoxBuffer">
+&lt;td colspan="2">&lt;input style="width:102px" class="button" type="button" onclick="insert(0)" value="0">&lt;/td>
+</pre>
+                </div>
+                <p>And we are done!<br>
+                  <face> ヽ(ﾟｰﾟ*ヽ)ヽ(*ﾟｰﾟ*)ﾉ(ﾉ*ﾟｰﾟ)ﾉ </face>
+                </p>
               </section>
+
               <section id="section_Final">
-                <a id="_Final">
+                <a href="https://mm909.github.io/SpeedCodeHTMLCalc/" id="_Final">
                   <h1>
-                    <codeG>\ (•◡•) / Final!</codeG>
+                    <codeG> <u> \ (•◡•) / Final!</u></codeG>
                   </h1>
                 </a>
-                <script>
+                <a href="cheatSheet.html" id="_Final">
+                  <h1>
+                    <codeG> <u>Insturctor Cheat Sheet</u></codeG>
+                  </h1>
+                </a>
+                <!-- <script>
                   function three(num) {
                   document.a.b.value = document.a.b.value + num
                 }
@@ -1219,7 +1254,7 @@ function ????? () {
                         <td><input id="." class="one" type="button" onclick="insert('.')" value="."></td>
                     </table>
                   </div>
-                </div>
+                </div> -->
 
               </section>
             </article>
