--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -424,7 +424,7 @@
     &lt;h3>I am number 3! Notice I'm even smaller?&lt;/h3>
     &lt;h4>Why are we still shrinking???&lt;/h4>
     &lt;h5>Can you even read this small???&lt;/h5>
-    &lt;h6>don't setp on me...&lt;/h6>
+    &lt;h6>Don't step on me...&lt;/h6>
   &lt;/body&gt;
 &lt;/html&gt;</pre>
                     </div>
@@ -436,7 +436,7 @@
                       <h3>I am number 3! Notice I'm even smaller?</h3>
                       <h4>Why are we still shrinking???</h4>
                       <h5>Can you even read this small???</h5>
-                      <h6>don't setp on me...</h6>
+                      <h6>Don't step on me...</h6>
                     </div>
                   </div>
                 </div>
