Fixed some text errorrs

--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -163,7 +163,7 @@
                 <p>
 
                   You may have done some <span style="color: #ed5565;">HTML</span> and <span style="color: #90EE90;">CSS</span> in CodeCombat, but this is to show you what it looks
-                  like when it’s not in a game.
+                  like when it's not in a game.
                   </br>
                   </br>
                   The first important thing to keep in mind, is that you have to have a project folder
@@ -211,7 +211,7 @@
                 </a>
                 <p>
                   In any coding project, there is always that starting point where your
-                  project will go to first to run code. In websites, that’s called "<i>index</i>."
+                  project will go to first to run code. In websites, that's called "<i>index</i>."
                   The index file is the first page that should open if someone were to
                   go to your site.
                 </p>
@@ -249,7 +249,7 @@
                 </a>
                 <p>
                   Awesome! If you double click on that file, you should see that opens
-                  a new page on your browser. You should also notice that page is blank…
+                  a new page on your browser. You should also notice that page is blank...
                   That is because we have to add code to it.
                 </p>
                 <h3 class="paraTitle">Coding your webpage</h3>
@@ -276,8 +276,8 @@
                         </br>
                         </br>
                         <img class="questionmark" src="../questionmark.jpg"></img>
-                        If you’re having trouble finding it, ask an
-                        instructor to help you (it won’t always show here).
+                        If you're having trouble finding it, ask an
+                        instructor to help you (it won't always show here).
                       </p>
                     </div>
                     <div class="fr">
@@ -388,8 +388,8 @@
                 <p>
                   Now that we have gotten that out of the way, we are going
                   to see the many different elements you can add to your website.
-                  <strong>Each example will be separate code</strong>​, so don’t worry that what is
-                  done in one section won’t appear in the next.
+                  <strong>Each example will be separate code</strong>​, so dont worry that what is
+                  done in one section won't appear in the next.
                 </p>
 
                 <a id="headers">
@@ -397,7 +397,7 @@
                 </a>
                 <p>
                   Headers are useful in web development for your readers to know when
-                  you’ve moved from one category to the next. There are 6 levels of headers,
+                  you've moved from one category to the next. There are 6 levels of headers,
                   as they get lower in the level, the smaller they get.
                 </p>
                 <h3 class="paraTitle">Header Elements <code class="prettifyHTML">&lt;h1&gt;</code></h3>
@@ -728,7 +728,7 @@
                 <p>
                   <code class="prettifyHTML">&lt;table>&lt;/table></code> creates your table the
                   <code class="prettifyCSS">style="width=100%"</code> is CSS code that you
-                  don’t need to worry about until later in this
+                  don't need to worry about until later in this
                   lesson.
                 </p>
                 <p>
@@ -748,7 +748,7 @@
                 </a>
                 <p>
                   Just text in a website can look rather boring,
-                  so we’re going to spice it up by placing images into
+                  so we're going to spice it up by placing images into
                   the page.
                 </p>
                 <h3 class="paraTitle">Image element <code class="prettifyHTML">&lt;image&gt;</code></h3>
@@ -756,7 +756,7 @@
                   <div class="para">
                     <div class="fl">
                       <p>
-                        Go and search up whatever you’d like to add into your page.
+                        Go and search up whatever you'd like to add into your page.
                       </p>
                     </div>
                     <div class="fr">
@@ -1024,7 +1024,7 @@
                   </h2>
                 </a>
                 <p>
-                  We’ve added text, images, and various other element tags. Yet, our pages still look a bit dull.
+                  We've added text, images, and various other element tags. Yet, our pages still look a bit dull.
                   CSS (Cascading Style Sheets) is used to change the look of your elements. This is done through
                   colors, padding, margins, alignments, and more!
                 </p>
@@ -1059,9 +1059,9 @@
                       </p>
                       <p>
                         This will hold all of your style information
-                        throughout your entire site! Placing it in it’s
+                        throughout your entire site! Placing it in it's
                         own file will allow us to use it in every page
-                        (as you’ll see later).
+                        (as you'll see later).
                       </p>
                     </div>
                     <div class="fr">
@@ -1121,7 +1121,7 @@ p {
                     </p>
                     <p>
                       All of these are known as "rules" for your
-                      style. The <strong> selector</strong>​ is the element you’re
+                      style. The <strong> selector</strong>​ is the element you're
                       changing, and the <strong> declaration​</strong> is what is
                       being changed from what you selected.
                     </p>
@@ -1242,8 +1242,8 @@ p {
           <br>
           <p>
             <i>
-              Notice how they’re both <code class="prettifyHTML">&lt;p>&lt;/p></code> tags? But
-              only one is changed, that’s why we have "id"
+              Notice how they're both <code class="prettifyHTML">&lt;p>&lt;/p></code> tags? But
+              only one is changed, that's why we have "id"
               properties?
             </i>
           </p>
@@ -1256,7 +1256,7 @@ p {
           <h2>Class <code class="prettifyCSS">.</code></h2>
         </a>
         <p>
-          You’ve done "id" for one element, now to see class affect multiple elements.
+          You've done "id" for one element, now to see class affect multiple elements.
         </p>
         <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -1430,7 +1430,7 @@ p {
               is being hovered over or not.
             </p>
             <p>Also notice the CSS rule .navbar a, this means that it will only affect the anchor elements that
-              are inside the .navbar class. If you were to create an anchor tag somewhere else, it wouldn’t
+              are inside the .navbar class. If you were to create an anchor tag somewhere else, it wouldn't
               look like the one in your header.</p>
             <p>There are many other elements in here, can you figure out what they all mean? (We will
               expand more on this in a web development specific course).</p>
@@ -1441,7 +1441,7 @@ p {
                 <codeB>Requirements</codeB>
               </h2>
             </a>
-        <p>Now that we’ve gone over all the basic aspects of a basic HTML/CSS website, you are going to
+        <p>Now that we've gone over all the basic aspects of a basic HTML/CSS website, you are going to
           make a website based on whatever you would like! The requirements of this project are as
           follows:</p>
         <ol>
@@ -1466,7 +1466,7 @@ p {
           </ol>
           <li>
             Must have more than one page (second page just needs to follow proper html structure,
-            you don’t need to make it as complicated as the main page unless you want to).
+            you don't need to make it as complicated as the main page unless you want to).
           </li>
           <li>Have your CSS file separate and placed in the appropriate folder</li>
           <li>Other CSS requirements</li>
