--- a/CCProjects/HTMLCalc/index.html
+++ b/CCProjects/HTMLCalc/index.html
@@ -1090,7 +1090,7 @@ function ????? () {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%)
+    transform: translateX(-50%) translateY(-50%);
   }
 &lt;/style></pre>
                 </div>
