--- a/CCProjects/HTMLCalc/index.html
+++ b/CCProjects/HTMLCalc/index.html
@@ -23,7 +23,7 @@
       position: relative;
       top: 50%;
       left: 50%;
-      transform: translateX(-25%) translateY(-50%)
+      transform: translateX(-25%) translateY(-50%);
     }
 
     .one {
