--- a/CCProjects/WD1/index.html
+++ b/CCProjects/WD1/index.html
@@ -707,7 +707,7 @@
                           <th>Release</th>
                         </tr>
                         <tr>
-                          <td>Fortnight</td>
+                          <td>Fortnite</td>
                           <td>PC</td>
                           <td>2017</td>
                         </tr>
