--- a/CCProjects/WD4/index.html
+++ b/CCProjects/WD4/index.html
@@ -1423,7 +1423,7 @@ if($_SERVER["REQUEST_METHOD"] == "POST") {
 &lt;?php
   session_start();
   session_destroy();
-  header("locaion:index.php");
+  header("location:index.php");
 ?>
 </pre>
                     </div>
@@ -1701,7 +1701,7 @@ if($_SERVER["REQUEST_METHOD"] == "POST") {
 &lt;?php
   session_start();
   session_destroy();
-  header("locaion:index.php");
+  header("location:index.php");
 ?>
 </pre>
                     </div>
@@ -1969,7 +1969,7 @@ if($_SERVER["REQUEST_METHOD"] == "POST") {
 &lt;?php
   session_start();
   session_destroy();
-  header("locaion:index.php");
+  header("location:index.php");
 ?>
 </pre>
                     </div>
@@ -2298,7 +2298,7 @@ if($_SERVER["REQUEST_METHOD"] == "POST") {
 &lt;?php
   session_start();
   session_destroy();
-  header("locaion:index.php");
+  header("location:index.php");
 ?>
 </pre>
                     </div>
@@ -2754,7 +2754,7 @@ Print '&lt;td align="center">&lt;a href="delete.php" id='. $row['id'] .'>delete&
 &lt;?php
   session_start();
   session_destroy();
-  header("locaion:index.php");
+  header("location:index.php");
 ?>
 </pre>
                     </div>
@@ -3186,7 +3186,7 @@ Print '&lt;td align="center">&lt;a href="delete.php" id='. $row['id'] .'>delete&
 &lt;?php
   session_start();
   session_destroy();
-  header("locaion:index.php");
+  header("location:index.php");
 ?>
 </pre>
                     </div>
